syntax = "proto3";

package com.github.dodo_cli.dodo_core.api.v1alpha2;

option go_package = "github.com/dodo-cli/dodo-core/api/v1alpha2";

import "google/protobuf/empty.proto";
import "api/v1alpha2/plugin.proto";
import "api/v1alpha2/backdrop.proto";

service ConfigurationPlugin {
  rpc GetPluginInfo(google.protobuf.Empty) returns (com.github.dodo_cli.dodo_core.api.v1alpha2.PluginInfo);

  rpc ListBackdrops(google.protobuf.Empty) returns (ListBackdropsResponse);
  rpc GetBackdrop(GetBackdropRequest) returns (com.github.dodo_cli.dodo_core.api.v1alpha2.Backdrop);
}

message ListBackdropsResponse {
  repeated com.github.dodo_cli.dodo_core.api.v1alpha2.Backdrop backdrops = 1;
}

message GetBackdropRequest {
  string alias = 1;
}
